--- a/client/app/superAdmin/partials/manageAccounts/manageAccountsModal/manageAccountsModal.html
+++ b/client/app/superAdmin/partials/manageAccounts/manageAccountsModal/manageAccountsModal.html
@@ -48,7 +48,7 @@
       </div>
     </tab>
 
-    <tab heading="Manage Events" ng-if="role=user" ng-init="getEvents()" ng-click="refreshDeleteUserHTML()" id="manageEvents">
+    <tab heading="Manage Events" ng-init="getEvents()" ng-click="refreshDeleteUserHTML()" id="manageEvents">
       <h2 class="modal-header">Client events:</h2>
       <div class="modal-body">
         <button class="btn btn-lg btn-block btn-success" ng-click="createEvent()">Create Event</button>
