google map fixes

--- a/client/app/client/partials/manageEvent/manageEvent.html
+++ b/client/app/client/partials/manageEvent/manageEvent.html
@@ -33,7 +33,9 @@
                 <div class = "col-md-6">
                   <h4 align="center">Event Location</h4>
                   <div>
-                  <ui-gmap-google-map ng-if="map.center" center="map.center" zoom="map.zoom"></ui-gmap-google-map>
+                  <ui-gmap-google-map ng-if="map.center" center="map.center" zoom="map.zoom" options="map.options">
+                    <ui-gmap-marker coords="marker.coords" options="marker.options" idkey="marker.id"></ui-gmap-marker>
+                  </ui-gmap-google-map>
                 </div>
                   <!-- <nvd3 options="options" data="ev.budget"></nvd3> -->
                 </div>
