Payments are properly adding and saving the due date correctly, still cant access payments in payment

--- a/client/app/admin/partials/managePayment/managePayment.html
+++ b/client/app/admin/partials/managePayment/managePayment.html
@@ -1,4 +1,4 @@
-<div class="row" ng-init="getPayments();">
+<div class="row" ng-init="getPayments(); sort='description'">
   <h1 class="page-header">Manage Payments</h1>
   <div class= "form-group col-md-12" style="padding-left:0px;">
     <div class="col-md-5" style="padding-left:0px;">
@@ -30,4 +30,3 @@
               </tab>
             </tabset>
           </div>
-          
