--- a/client/app/client/partials/manageEvent/manageEvent.html
+++ b/client/app/client/partials/manageEvent/manageEvent.html
@@ -34,7 +34,12 @@
                   <h4 align="center">Event Location</h4>
                   <div>
                   <ui-gmap-google-map ng-if="map.center" center="map.center" zoom="map.zoom" options="map.options">
-                    <ui-gmap-marker coords="marker.coords" options="marker.options" idkey="marker.id"></ui-gmap-marker>
+                    <ui-gmap-marker coords="markers.coords" idkey ="markers.id">
+                      <ui-gmap-window>
+                        <div>{{markers.window.title}}</div>
+                      </ui-gmap-window>
+                    </ui-gmap-marker>
+
                   </ui-gmap-google-map>
                 </div>
                   <!-- <nvd3 options="options" data="ev.budget"></nvd3> -->
