created new field for location name and address

--- a/client/app/client/partials/manageEvent/manageEvent.html
+++ b/client/app/client/partials/manageEvent/manageEvent.html
@@ -64,8 +64,13 @@
                     </tr>
                     <br>
                     <tr>
-                      <td><h5 align="left"> Location: </h5></td>
-                      <td><h5 align="right"> {{ev.location}} </h5></td>
+                      <td><h5 align="left"> Location Name: </h5></td>
+                      <td><h5 align="right"> {{ev.locationName}} </h5></td>
+                    </tr>
+                    <br>
+                    <tr>
+                      <td><h5 align="left"> Address </h5></td>
+                      <td><h5 align="right"> {{ev.locationAdd}} </h5></td>
                     </tr>
                   </table>
                 </div>
