--- a/client/app/client/partials/addGuest/addGuest.html
+++ b/client/app/client/partials/addGuest/addGuest.html
@@ -11,6 +11,14 @@
             <input name="name" type="name" ng-model="name" id="name" class="form-control" required>
           </div>
           <div class="form-group" show-errors>
+            <label for="name">Phone Number</label>
+            <input name="phoneNumber" type="number" ng-model="phoneNumber" id="name" class="form-control">
+          </div>
+          <div class="form-group" show-errors>
+            <label for="name">Email</label>
+            <input name="Email" type="email" ng-model="email" id="name" class="form-control" required>
+          </div>
+          <div class="form-group" show-errors>
             <label for="partySize">Party Size</label>
             <input name="partySize" type="partySize" ng-model="partySize" id="partySize" class="form-control" required>
           </div>
