--- a/client/app/client/partials/manageGuestList/manageGuestList.html
+++ b/client/app/client/partials/manageGuestList/manageGuestList.html
@@ -47,7 +47,7 @@
                   <td>{{item.name}}</td>
                   <td>{{item.partySize}}</td>
                   <td>{{item.accommodations}}</td>
-                  <td><span ng-class="(item.accepted) ? 'fa fa-check-square-o fa-lg' : 'fa fa-square-o fa-lg'"></span></td>
+                  <td><span ng-class="(item.accepted) ? 'fa fa-check-square-o fa-lg' : 'fa fa-square-o fa-lg'" ng-click="changeAccepted()"></span></td>
                   <td><span class="glyphicon glyphicon-edit" ng-click="toggleEdit(item)"></span></td>
                 </tr>
               </tbody>
@@ -64,7 +64,29 @@
           </div>
         </div>
           <div ng-show="state1">
-            <h1>HI<h1>
+            <b>Update Information For {{guest.name}}<b>
+              <br></br>
+              <form name="listingForm" class="form-horizontal" ng-submit="submit()">
+                <div id="budget" class="col-md-4">
+                  <label for="guestPhone">Phone Number:</label>
+                  <input type="number" name="guestPhone" placeholder="{{guest.phoneNumber}}" ng-model="guestPhone" class="form-control">
+                </div>
+                <div id="budget" class="col-md-5">
+                  <label for="guestEmail">Email:</label>
+                  <input type="email" name="guestEmail" placeholder="{{guest.email}}" ng-model="guestEmail" class="form-control">
+                </div>
+                <div id="budget" class="col-md-2">
+                  <label for="todoInput">Party Size:</label>
+                  <input type="number" name="guestSize" placeholder="{{guest.partySize}}" ng-model="guestSize" class="form-control">
+                </div>
+                <div id="budget" class="col-md-6">
+                  <label for="accommodations">Accommodations:</label>
+                  <input type="text" name="accommodations" placeholder="{{guest.accommodations}}" ng-model="guestAccommodations" class="form-control">
+                </div>
+                  <br></br>
+                  <button class="btn btn-success" id="updateGuest" ng-submit="updateGuest()">Update</button>
+                  <button class = "btn btn-danger" ng-click="deleteGuest()">Remove</button>
+                <form>
           </div>
 
       </div>
