--- a/client/app/client/partials/manageEvent/manageEvent.html
+++ b/client/app/client/partials/manageEvent/manageEvent.html
@@ -6,6 +6,7 @@
         <tr>
           <th><b>Event Name</b></td>
             <th><b>Location</b></td>
+              <th><b>Address</b></td>
               <th><b>Date</b></td>
                 <th></td>
                 </tr>
@@ -13,7 +14,8 @@
               <tbody>
                 <tr ng-repeat="event in events">
                   <td>{{event.name}}</td>
-                  <td>{{event.location}}</td>
+                  <td>{{event.locationName}}</td>
+                  <td>{{event.locationAdd}}</td>
                   <td>{{event.date.substring(5,10) + '-' + event.date.substring(0,4)}}</td>
                   <td> <btn class = "btn btn-primary" ng-click="toggle(event)"> Details</btn></td>
                 </tr>
