--- a/client/app/client/partials/manageEvent/manageEvent.html
+++ b/client/app/client/partials/manageEvent/manageEvent.html
@@ -1,6 +1,6 @@
 <div class = "container-fluid">
   <div ng-controller="manageEventCtrl" ng-init="getEvents()">
-    <h2>Your Event </h2>
+    <h2>Your Events </h2>
     <table class="table table-hover">
       <thead>
         <tr>
