--- a/client/app/client/partials/viewBudget/viewBudget.html
+++ b/client/app/client/partials/viewBudget/viewBudget.html
@@ -1,7 +1,7 @@
 <div class = "container-fluid">
   <div ng-controller="viewBudgetCtrl" ng-init="getEvents(); load()">
-    <h2>Welcome, {{clientName}} </h2>
-    <h3>{{event.name}}</h3>
+    <h2>Budget for {{event.name}} </h2>
+
 
     <div ng-init="">
       <!--Your budget-->
@@ -43,12 +43,6 @@
           </tr>
         </thead>
         <tbody>
-          <!-- <tr>
-            <td>Food</td>
-            <td>200</td>
-            <td><button class="btn btn-danger" name="remove">Remove</button></td>
-            <td><button class="btn btn-info" >Edit</button></td>
-          </tr> -->
           <tr ng-repeat="expense in event.budget">
             <td>{{expense.title}}</td>
             <td>{{expense.amount}}</td>
@@ -61,59 +55,3 @@
 
   </div>
 </div>
-
-
-<!-- <div class = "container-fluid">
-  <div class="view-budget-page" ng-controller="viewBudgetCtrl" ng-init="getEvents()">
-      <h2>Welcome, {{clientName}} </h2>
-      <h4>Event: {{event}}</h4>
-      <h4>VIEW BUDGET PAGE</h4>
-
-      <div class="row">
-        <form class="form-inline col-md-10 col-md-offset-1" id="view-budget-form">
-          <p>Add Expenditure:</p>
-          <div class="form-group">
-            <label class="sr-only" for="inputExpenditure">Expenditure</label>
-            <input type="text" class="form-control" id="inputExpenditure" placeholder="Expenditure">
-          </div>
-          <div class="form-group" id="price-input">
-            <label class="sr-only" for="inputAmount">Amount</label>
-            <div class="input-group">
-              <div class="input-group-addon">$</div>
-              <input type="text" class="form-control" id="inputAmount" placeholder="Amount">
-              <div class="input-group-addon">.00</div>
-            </div>
-          </div>
-          <button type="submit" class="btn btn-success">Add</button>
-        </form>
-      </div>
-
-      <div class="row">
-        <table class="table table-hover col-md-10 col-md-offset-1">
-          <thead>
-            <tr>
-              <th><b>Expenditure</b></td>
-              <th><b>Price</b></td>
-              <th><b></b></td>
-              <th><b></b></td>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Food</td>
-              <td>$200.00</td>
-              <td><button class="btn btn-danger" name="remove">Remove</button></td>
-              <td><button class="btn btn-info" >Edit</button></td>
-            </tr>
-            <tr ng-repeat="event in events">
-              <td>{{event.name}}</td>
-              <td>{{event.location}}</td>
-              <td>{{event.date.substring(5,10) + '-' + event.date.substring(0,4)}}</td>
-              <td> <button class = "btn btn-primary" ng-click="toggle(event)">Budget</button></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
-  </div>
-</div> -->
