Change title on guest list page

--- a/client/app/client/partials/manageGuestList/manageGuestList.html
+++ b/client/app/client/partials/manageGuestList/manageGuestList.html
@@ -1,6 +1,6 @@
 <div class = "container-fluid">
   <div ng-controller="WelcomeCtrl" ng-init="getEvents()">
-      <h2>Welcome, {{clientName}} </h2>
+      <h2>Your Guest List </h2>
       <table class="table table-hover">
         <thead>
           <tr>
