--- a/client/app/admin/partials/viewTestimonials/viewTestimonials.html
+++ b/client/app/admin/partials/viewTestimonials/viewTestimonials.html
@@ -1,8 +1,8 @@
-<div class="row" ng-init="getTestimonials(); sort='name'">
+<div class="row" ng-init="getTestimonials(); sort='postDate'">
   <h1 class="page-header">View Testimonials</h1>
   <div class = "form-group col-md-12" style="padding-left:0px;">
     <div class="col-md-5" style="padding-left:0px;">
-      <input type="text" class="form-control" placeholder="Search here..." ng-model="searchLinks"></input>
+      <input type="text" class="form-control" placeholder="Search here..." ng-model="searchTestimonials"></input>
     </div>
   </div>
   <tabset>
@@ -11,17 +11,19 @@
       <table class="table table-hover hoverSort">
         <thead>
           <tr>
-            <th ng-click="sort='type'"><b>Name</b></th>
-            <th ng-click="sort='name'"><b>Event Desctiption</b></th>
-            <th ng-click="sort='phoneNumber'"><b>Message</b></th>
+            <th ng-click="sort='postName'"><b>Name</b></th>
+            <th ng-click="sort='eventDescription'"><b>Event Desctiption</b></th>
+            <th ng-click="sort='message'"><b>Message</b></th>
+            <th ng-click="sort='postDate'"><b>Post Date</b></th>
           </tr>
         </thead>
 
         <tbody>
-          <tr ng-repeat="testimonial in testimonials">
+          <tr ng-repeat="testimonial in testimonials | filter: searchTestimonials | orderBy: sort">
             <td>{{testimonial.postName}}</td>
             <td>{{testimonial.eventDescription}}</td>
             <td>{{testimonial.message}}</td>
+            <td>{{testimonial.postDate.substring(5,10) + '-' + testimonial.postDate.substring(0,4)}}</td>
           </tr>
         </tbody>
       </table>
