--- a/client/app/client/partials/makePayment/makePayment.html
+++ b/client/app/client/partials/makePayment/makePayment.html
@@ -1,18 +1,18 @@
 <div class="row">
-  <div ng-init="getPayments()">
+  <div ng-init="getPayments(); sort='date'">
   <h1 class="page-header">Make a Payment</h1>
   <table class="table table-hover hoverSort">
       <thead>
         <tr>
-          <th><b>Fees</b></td>
-          <th><b>Due Date</b></td>
-          <th><b>Amount</b></td>
+          <th ng-click="sort='description'"><b>Fees</b></td>
+          <th ng-click="sort='date'"><b>Due Date</b></td>
+          <th ng-click="sort='amount'"><b>Amount</b></td>
           <th></td>
         </tr>
       </thead>
       <tbody>
         </tr>
-        <tr ng-repeat="payment in payments">
+        <tr ng-repeat="payment in payments | orderBy:sort">
           <td>{{payment.description}}</td>
           <td>{{payment.dueDate.substring(5,10) + '-' + payment.dueDate.substring(0,4)}}</td>
           <td>{{payment.amount}}</td>
