--- a/client/app/client/partials/welcome/welcome.html
+++ b/client/app/client/partials/welcome/welcome.html
@@ -1,18 +1,18 @@
 <div class = "container-fluid">
-  <div ng-controller="WelcomeCtrl" ng-init="getEvents()">
+  <div ng-controller="WelcomeCtrl" ng-init="getEvents(); sort='date'">
       <h2>Welcome, {{clientName}} </h2>
-      <table class="table table-hover">
+      <table class="table table-hover hoverSort">
         <thead>
           <tr>
-            <th><b>Event Name</b></td>
-              <th><b>Location</b></td>
-                <th><b>Address</b></td>
-                <th><b>Date</b></td>
+            <th ng-click="sort='name'"><b>Event Name</b></td>
+              <th ng-click="sort='locationName'"><b>Location</b></td>
+                <th ng-click="sort='locationAdd'"><b>Address</b></td>
+                <th ng-click="sort='date'"><b>Date</b></td>
                   <th></td>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr ng-repeat="ev in events">
+                  <tr ng-repeat="ev in events | orderBy: sort">
                     <td>{{ev.name}}</td>
                     <td>{{ev.locationName}}</td>
                     <td>{{ev.locationAdd}}</td>
