--- a/client/app/client/partials/yourBudget/yourBudget.html
+++ b/client/app/client/partials/yourBudget/yourBudget.html
@@ -1,19 +1,19 @@
 <div class = "container-fluid">
-  <div ng-controller="yourBudgetCtrl" ng-init="getEvents()">
+  <div ng-controller="yourBudgetCtrl" ng-init="getEvents(); sort='date'">
       <h2>Your Budget </h2>
-      <table class="table table-hover">
+      <table class="table table-hover hoverSort">
         <thead>
           <tr>
-            <th><b>Event Name</b></td>
-            <th><b>Location</b></td>
-            <th><b>Date</b></td>
+            <th ng-click="sort='name'"><b>Event Name</b></td>
+            <th ng-click="sort='locationName'"><b>Location</b></td>
+            <th ng-click="sort='date'"><b>Date</b></td>
             <th><b>Budget</b></td>
           </tr>
         </thead>
         <tbody>
-          <tr ng-repeat="event in events">
+          <tr ng-repeat="event in events |orderBy: sort">
             <td>{{event.name}}</td>
-            <td>{{event.location}}</td>
+            <td>{{event.locationName}}</td>
             <td>{{event.date.substring(5,10) + '-' + event.date.substring(0,4)}}</td>
             <td><button class="btn btn-info" ui-sref="client.viewBudget({eventId: event._id})">View Budget</button></td>
           </tr>
