--- a/client/app/admin/partials/manageEvent/manageEventModal/manageEventModal.html
+++ b/client/app/admin/partials/manageEvent/manageEventModal/manageEventModal.html
@@ -265,7 +265,7 @@
                 <td>{{item.phoneNumber}}</td>
                 <td>{{item.partySize}}</td>
                 <td>{{item.accommodations}}</td>
-                <td><span ng-class="(item.accepted) ? 'fa fa-check-square-o fa-lg' : 'fa fa-square-o fa-lg'" ng-click="changeAccepted($index)"></span></td>
+                <td><span ng-class="(item.accepted) ? 'fa fa-check-square-o fa-lg' : 'fa fa-square-o fa-lg'" ng-click="changeAccepted(event, $index)"></span></td>
                 <td style="text-align:right"><button type="button" class="btn btn-danger" ng-click="deleteGuest($index)">Remove</button></td>
               </tr>
             </tbody>
