--- a/client/app/client/partials/addGuest/addGuest.html
+++ b/client/app/client/partials/addGuest/addGuest.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div>
     <div>
-      <h1 class="page-header">Add Guests for {{ev.name}}</h1>
+      <h1 class="page-header">Add Guests for {{eve.name}}</h1>
     </div>
     <div class="col-sm-6">
-      <form name="listingForm" class="form-horizontal" ng-submit="submit()">
+      <form name="listingForm" class="form-horizontal" ng-submit="addGuest()">
         <fieldset>
           <div class="form-group" show-errors>
             <label for="name">Name</label>
