--- a/client/app/superAdmin/partials/createEvent/createEvent.html
+++ b/client/app/superAdmin/partials/createEvent/createEvent.html
@@ -31,8 +31,13 @@
 
         <!-- Div to input then venue  -->
         <div class="form-group row col-md-12" show-errors>
-          <label for="venue">Venue:</label>
-          <input name="venue" type="venue" ng-model="venue" id="venue" class="form-control">
+          <label for="venueName">Venue Name:</label>
+          <input name="venueName" type="venueName" ng-model="venueName" id="venueName" class="form-control">
+        </div>
+
+        <div class="form-group row col-md-12" show-errors>
+          <label for="venueAddress">Venue Address:</label>
+          <input name="venueAddress" type="venueAddress" ng-model="venueAddress" id="venueAddress" class="form-control">
         </div>
 
         <!-- Div to input the goal budget -->
