--- a/client/app/superAdmin/partials/manageAccounts/manageAccountsModal/manageAccountsModal.html
+++ b/client/app/superAdmin/partials/manageAccounts/manageAccountsModal/manageAccountsModal.html
@@ -60,7 +60,7 @@
           </tr>
           <tr ng-repeat="event in events" ng-click="manageEvent(event)">
             <td>{{event.name}}</td>
-            <td>{{event.location}}</td>
+            <td>{{event.locationName}}</td>
             <td>{{event.budgetGoal}}</td>
           </tr>
         </table>
