--- a/client/app/superAdmin/partials/manageEvent/manageEventModal/manageEventModal.html
+++ b/client/app/superAdmin/partials/manageEvent/manageEventModal/manageEventModal.html
@@ -24,16 +24,15 @@
               </div>
 
               <!-- Div to input time for date -->
-              <div class = "col-md-5 col-md-offset-1" show errors>
-                <timepicker ng-model="event.date" hour-step="1" minute-step="1" show-meridian="true"></timepicker>
+              <div class="form-group row col-md-12" show-errors>
+                <label for="venue">Venue:</label>
+                <input name="venue" type="venue" ng-model="event.locationName" id="venue" class="form-control" required>
               </div>
-            </div>
 
-            <!-- Div to input then venue  -->
-            <div class="form-group row col-md-12" show-errors>
-              <label for="venue">Venue:</label>
-              <input name="venue" type="venue" ng-model="event.location" id="venue" class="form-control" required>
-            </div>
+              <div class="form-group row col-md-12" show-errors>
+                <label for="venue">Address:</label>
+                <input name="venueAddress" type="venueAddress" ng-model="event.locationAdd" id="venueAddress" class="form-control" required>
+              </div>
 
             <!-- Div to input the goal budget -->
             <div class="form-group row col-md-12" show-errors>
