--- a/client/app/client/partials/makePayment/makePayment.html
+++ b/client/app/client/partials/makePayment/makePayment.html
@@ -24,58 +24,7 @@
                 <td>{{payment.description}}</td>
                 <td>{{payment.dueDate.substring(5,10) + '-' + payment.dueDate.substring(0,4)}}</td>
                 <td>{{payment.amount}}</td>
-                <td><div id="paypal-button-container"></div>
-                  <script src="https://www.paypalobjects.com/api/checkout.js"></script>
-                  <script>
-                  paypal.Button.render({
-
-                    env: 'sandbox', // sandbox | production
-
-                    style: {
-                      label: 'paypal',
-                      size:  'small',    // small | medium | large | responsive
-                      shape: 'rect',     // pill | rect
-                      color: 'blue',     // gold | blue | silver | black
-                      tagline: false
-                    },
-
-                    // PayPal Client IDs - replace with your own
-                    // Create a PayPal app: https://developer.paypal.com/developer/applications/create
-                    client: {
-                      sandbox:    'AZDxjDScFpQtjWTOUtWKbyN_bDt4OgqaF4eYXlewfBP4-8aqX3PiV8e1GWU6liB2CUXlkA59kJXE7M6R',
-                      production: '<insert production client id>'
-                    },
-
-                    // Show the buyer a 'Pay Now' button in the checkout flow
-                    commit: true,
-
-                    // payment() is called when the button is clicked
-                    payment: function(data, actions) {
-
-                      // Make a call to the REST api to create the payment
-                      return actions.payment.create({
-                        payment: {
-                          transactions: [
-                            {
-                              amount: { total: '0.01', currency: 'USD' }
-                            }
-                          ]
-                        }
-                      });
-                    },
-
-                    // onAuthorize() is called when the buyer approves the payment
-                    onAuthorize: function(data, actions) {
-
-                      // Make a call to the REST api to execute the payment
-                      return actions.payment.execute().then(function() {
-                        window.alert('Payment Complete!');
-                      });
-                    }
-
-                  }, '#paypal-button-container');
-
-                  </script></td>
+                <td><button ng-click = "toPaypal(payment)">Pay Here</button></td>
                 </tr>
               </tbody>
             </table>
